--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -173,7 +173,7 @@
     <main>
       <div class="signup-container">
         <h1>Create Your Account</h1>
-        <form id="signupForm" action="/signup" method="POST">
+        <form id="signupForm" action="/sign-up" method="POST">
           <div class="form-group">
             <label for="firstName">First Name</label>
             <input type="text" id="firstName" name="firstName" required />
