become member feature

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -227,7 +227,7 @@
     
     <img src="community.svg" alt="WhisperCircle community illustration" class="hero-image" />
   </main>
-
+  <a href="/become-member">member</a>
   <footer>
     &copy; 2025 WhisperCircle. All rights reserved. | <a href="/privacy" style="color: var(--accent-primary); text-decoration: none;">Privacy Policy</a>
   </footer>
